--- a/package.json
+++ b/package.json
@@ -10,36 +10,44 @@
     "npm": ">=5.6.0",
     "yarn": ">=1.5.1"
   },
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --trailing-comma es5 --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "node index.js",
     "lint": "esw *.js config --color",
-    "lint:watch": "yarn lint -- --watch",
-    "precommit": "yarn lint"
+    "lint:watch": "yarn lint -- --watch"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "bluebird": "3.5.1",
-    "body-parser": "1.18.2",
-    "dotenv": "^4.0.0",
-    "http-status": "1.0.1",
-    "joi": "^14.0.4",
-    "mongoose": "4.7.4",
+    "aws-sdk": "^2.507.0",
+    "axios": "^0.19.0",
+    "bluebird": "3.5.5",
+    "body-parser": "1.19.0",
+    "dotenv": "^8.0.0",
+    "http-status": "^1.3.2",
+    "joi": "^14.3.1",
+    "mongoose": "^5.6.9",
     "ssl-root-cas": "1.2.5",
     "xml2js": "0.4.19"
   },
   "devDependencies": {
-    "commitizen": "^2.9.6",
-    "cz-conventional-changelog": "1.2.0",
-    "eslint": "3.16.1",
-    "eslint-config-airbnb-base": "7.1.0",
-    "eslint-plugin-import": "1.16.0",
-    "eslint-watch": "2.1.14",
-    "husky": "0.14.3",
-    "validate-commit-msg": "^2.14.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-watch": "^6.0.0",
+    "husky": "^2.4.1",
+    "lint-staged": "^9.2.1",
+    "prettier": "^1.18.2"
   }
 }
